--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,109 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background=""
+            android:padding="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/weather" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:text="12°"
+            android:textSize="40dp" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:background=""
+        android:padding="4dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/baseline_apps_24" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="724dp"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background=""
+                    android:drawableTop="@drawable/round_accessibility_24"
+                    android:padding="30dp"
+                    android:text="hi"
+                    android:textColor="@color/black" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:padding="50dp" />
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:padding="50dp" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnCloset"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:background="#e9ecef"
+            android:text="옷장" />
+
+        <Button
+            android:id="@+id/btnCody"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:background="#e9ecef"
+            android:text="코디추천" />
+
+        <Button
+            android:id="@+id/btnRegist"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:background="#e9ecef"
+            android:text="옷 등록" />
+
+        <Button
+            android:id="@+id/btnSet"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:background="#e9ecef"
+            android:text="설정" />
+    </LinearLayout>
 </LinearLayout>
