--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/btnWeather"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background=""
+            android:background="#00ff0000"
             android:padding="0dp"
             android:scaleType="centerCrop"
             android:src="@drawable/weather" />
@@ -32,7 +33,7 @@
             android:id="@+id/btnSettings"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background=""
+            android:background="#00ff0000"
             android:scaleType="centerCrop"
             android:padding="6dp"
             android:layout_gravity="right"
@@ -45,7 +46,8 @@
         android:background="#000000" />
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dp"
+        android:layout_weight="0.7">
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -63,14 +65,15 @@
         android:background="#000000" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.7"
         android:orientation="horizontal" >
 
         <ImageButton
             android:id="@+id/btnSort"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background=""
+            android:background="#00ff0000"
             android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/sort" />
@@ -78,7 +81,7 @@
             android:id="@+id/btnSearch"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background=""
+            android:background="#00ff0000"
             android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/search" />
@@ -91,7 +94,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="660dp"
+        android:layout_height="0dp"
+        android:layout_weight="9"
         android:fillViewport="true">
 
         <LinearLayout
@@ -244,7 +248,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp" >
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -273,10 +278,9 @@
         </LinearLayout>
         <android.widget.Button
             android:id="@+id/btnAdd"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="top|center"
-            android:background="@drawable/baseline_add_circle_24"
-            android:textSize="30dp"/>
+            android:background="@drawable/baseline_add_circle_24" />
     </FrameLayout>
 </LinearLayout>
