--- a/app/src/main/res/layout/codyAdd.xml
+++ b/app/src/main/res/layout/codyAdd.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="819dp" >
+        android:layout_height="0dp"
+        android:layout_weight="11">
 
         <Button
             android:id="@+id/btnAddClothes"
@@ -17,11 +18,11 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:drawableTop="@drawable/baseline_add_box_24"
             android:background="#00ff0000"
+            android:drawableTop="@drawable/baseline_add_box_24"
+            android:text="옷 추가"
             android:textColor="#000000"
-            android:textSize="25dp"
-            android:text="옷 추가"/>
+            android:textSize="25dp" />
 
         <Button
             android:id="@+id/btnAddCodey"
@@ -29,17 +30,18 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:drawableTop="@drawable/baseline_add_box_24"
             android:background="#00ff0000"
+            android:drawableTop="@drawable/baseline_add_box_24"
+            android:text="코디 추가"
             android:textColor="#000000"
-            android:textSize="25dp"
-            android:text="코디 추가"/>
+            android:textSize="25dp" />
 
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp" >
+        android:layout_height="0dp"
+        android:layout_weight="0.98">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,28 +52,29 @@
                 android:id="@+id/btnCloset"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
+                android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="#e9ecef"
                 android:gravity="left"
-                android:layout_gravity="bottom"
                 android:text="옷장" />
 
             <Button
                 android:id="@+id/btnCody"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
+                android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="#e9ecef"
-                android:layout_gravity="bottom"
                 android:gravity="right"
                 android:text="코디" />
         </LinearLayout>
+
         <android.widget.Button
             android:id="@+id/btnAdd"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="top|center"
             android:background="@drawable/baseline_add_circle_24"
-            android:textSize="30dp"/>
+            android:textSize="30dp" />
     </FrameLayout>
 </LinearLayout>
