--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
@@ -17,7 +18,7 @@
             android:layout_width="200dp"
             android:layout_margin="0dp"
             android:layout_height="match_parent"
-            android:background="color/white"
+            android:background="#00ff0000"
             android:textColor="@color/black"
             android:text="← 뒤로가기"
             android:textSize="30dp" />
@@ -29,11 +30,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="13"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,7 +61,7 @@
                 android:id="@+id/btnMypage"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:background=""
+                android:background="#00ff0000"
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -73,7 +75,7 @@
                 android:id="@+id/btnNotice"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:background=""
+                android:background="#00ff0000"
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -87,7 +89,7 @@
                 android:id="@+id/btnVersion"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:background=""
+                android:background="#00ff0000"
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -101,7 +103,7 @@
                 android:id="@+id/btnCsr"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:background=""
+                android:background="#00ff0000"
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
