--- a/app/src/main/res/layout/codyregistconfirm.xml
+++ b/app/src/main/res/layout/codyregistconfirm.xml
@@ -17,7 +17,7 @@
             android:layout_width="200dp"
             android:layout_margin="0dp"
             android:layout_height="match_parent"
-            android:background="color/white"
+            android:background="#00ff0000"
             android:textColor="@color/black"
             android:text="← 뒤로가기"
             android:textSize="30dp" />
