1. 옷 등록 화면 탭 이동 2. 옷 등록 레이아웃 스크롤뷰로 수정 3. 옷장 위치, 옷 종류, 옷 사이즈 Spinner로 표시되게 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,13 @@
             android:text="옷장"
             android:textSize="25dp"
             android:gravity="center"/>
+        <Spinner
+            android:id="@+id/main_c_loc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbarSize="100dp"
+            />
+
         <View
             android:layout_width="1dp"
             android:layout_height="50dp"
