--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
+    android:id="@+id/post_main"
+    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="옷등록"/>
-    <ImageView
-        android:layout_marginTop="50dp"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_gravity="center"
-        android:background="@drawable/clothes" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,88 +14,96 @@
         android:padding="30dp">
 
         <TextView
+            android:layout_marginTop="-10dp"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="옷등록"/>
+
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center"
+            android:background="@drawable/clothes" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="옷장 위치"
+            android:textSize="20dp" />
+
+        <Spinner
+            android:id="@+id/c_loc_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 이름"
             android:textSize="20dp" />
-
         <EditText
+            android:id="@+id/c_name_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="옷 이름을 입력해주세요."/>
+
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 브랜드"
             android:textSize="20dp" />
-
         <EditText
+            android:id="@+id/c_brand_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="브랜드 이름을 입력해주세요."/>
 
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 종류"
             android:textSize="20dp" />
+        <Spinner
+            android:id="@+id/c_type_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <RadioGroup
-            android:id="@+id/clothes_post"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal" >
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="상의" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="하의" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="양말" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="신발" />
-        </RadioGroup>
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 사이즈"
             android:textSize="20dp" />
-        <RadioGroup
-            android:id="@+id/size_post"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal" >
+        <Spinner
+            android:id="@+id/c_size_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="95" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="100" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="105" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="110" />
-        </RadioGroup>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="메모"
+            android:textSize="20dp" />
+        <EditText
+            android:id="@+id/c_memo_post"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="메모를 입력해주세요."/>
+
         <Button
+            android:layout_marginTop="20dp"
             android:id="@+id/btnPost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="등록"/>
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
