--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -5,76 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    android:id="@+id/codyadd_main">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:text="코디등록"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="11">
-
-        <Button
-            android:id="@+id/btnAddClothes"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
+        android:layout_height="160dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="15dp"
+            android:textAlignment="center"
+            android:text="상의"/>
+        <ImageView
+            android:id="@+id/codyadd_top"
+            android:layout_marginTop="15dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="#00ff0000"
-            android:drawableTop="@drawable/baseline_add_box_24"
-            android:text="옷 추가"
-            android:textColor="#000000"
-            android:textSize="25dp" />
+            android:src="@drawable/top"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnAddCodey"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="하의"
+            android:textAlignment="center"
+            android:textSize="15dp" />
+
+        <ImageView
+            android:id="@+id/codyadd_mid"
+            android:layout_marginTop="15dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="#00ff0000"
-            android:drawableTop="@drawable/baseline_add_box_24"
-            android:text="코디 추가"
-            android:textColor="#000000"
-            android:textSize="25dp" />
+            android:src="@drawable/mid"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textAlignment="center"
+            android:text="신발"/>
+        <ImageView
+            android:id="@+id/codyadd_btm"
+            android:layout_marginTop="15dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/btm"/>
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:text="코디명: "/>
+        <EditText
+            android:id="@+id/codyadd_title"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center">
+        <Button
+            android:id="@+id/codyadd_addbtn"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="등록"/>
+        <Button
+            android:id="@+id/codyadd_canclebtn"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:text="취소"/>
+    </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.98">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="79dp"
-            android:layout_gravity="bottom">
-
-            <Button
-                android:id="@+id/btnCloset"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="#e9ecef"
-                android:gravity="left"
-                android:text="옷장" />
-
-            <Button
-                android:id="@+id/btnCody"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="#e9ecef"
-                android:gravity="right"
-                android:text="코디" />
-        </LinearLayout>
-
-        <android.widget.Button
-            android:id="@+id/btnAdd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="top|center"
-            android:background="@drawable/baseline_add_circle_24"
-            android:textSize="30dp" />
-    </FrameLayout>
 </LinearLayout>
