--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -256,33 +256,36 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="79dp"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom">
 
             <Button
                 android:id="@+id/btnCloset"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#e9ecef"
-                android:gravity="left"
-                android:layout_gravity="bottom"
+                android:background="#00ff00"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 android:text="옷장" />
 
             <Button
                 android:id="@+id/btnCody"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#e9ecef"
-                android:layout_gravity="bottom"
-                android:gravity="right"
+                android:background="#00ff00"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 android:text="코디" />
         </LinearLayout>
+
         <android.widget.Button
             android:id="@+id/btnAdd"
             android:layout_width="70dp"
