--- a/app/src/main/res/layout/addmenu.xml
+++ b/app/src/main/res/layout/addmenu.xml
@@ -41,31 +41,33 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.98">
+        android:layout_weight="1" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="79dp"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom">
 
             <Button
                 android:id="@+id/btnCloset"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#e9ecef"
-                android:gravity="left"
+                android:background="#00ff00"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 android:text="옷장" />
 
             <Button
                 android:id="@+id/btnCody"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#e9ecef"
-                android:gravity="right"
+                android:background="#00ff00"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 android:text="코디" />
         </LinearLayout>
 
@@ -74,7 +76,6 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="top|center"
-            android:background="@drawable/baseline_add_circle_24"
-            android:textSize="30dp" />
+            android:background="@drawable/baseline_add_circle_24" />
     </FrameLayout>
 </LinearLayout>
